# hackline

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DECISIONS.md  DEMO.md  Dockerfile  HOW-TO-ADD-CODE.md  INTEGRATION-RUBIX.md  Makefile  README.md  SCOPE.md  deny.toml  fly.toml  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: audit.toml
.github/workflows/: ci.yml  security.yml
DOCS/: ARCHITECTURE.md  AUTH.md  CLI.md  CODEBASE-ANALYSIS.md  CONFIG.md  DATABASE.md  DEPLOYMENT.md  DEVELOPMENT.md  KEYEXPRS.md  REST-API.md  openapi.yaml
DOCS/sessions/: 2026-05-14-goal0-bridge-spike.md  2026-05-14-goal1-real-binaries.md  2026-05-14-goal2-sqlite-rest.md  2026-05-14-goal3-auth-cli.md  2026-05-14-goal4-message-plane.md  2026-05-14-goal5-cmd-api-host-routing.md  2026-05-14-goal6-audit-admin-ui.md  2026-05-14-goal7-multi-tenant-orgs.md  2026-05-14-goal8-acme-tls.md  2026-05-15-goal10-acme-renewal.md  2026-05-15-goal11-ts-codegen.md  2026-05-15-goal12-envelope-shim.md  2026-05-15-goal13-ts-client-package.md  2026-05-15-goal14-no-mock.md  2026-05-15-goal15-client-integration-tests.md  2026-05-15-goal16-reconcile-rest-shapes.md  2026-05-15-goal17-device-last-seen-at-rename.md  2026-05-15-goal18-tunnel-shape-reconcile.md  2026-05-15-goal19-mintedtoken-shape.md  2026-05-15-goal20-audit-projection.md  2026-05-15-goal21-page-envelope-items.md  2026-05-15-goal22-tunnel-session-ts-seconds.md  2026-05-15-goal23-v006-tunnel-session-ts-backfill.md  2026-05-15-goal24-v007-audit-fks-on-delete-set-null.md  2026-05-15-goal25-audit-subject-detail-fallback.md  2026-05-15-goal26-device-health-rtt-probe.md  2026-05-15-goal27-device-health-rtt-cache.md  2026-05-15-goal28-devices-list-health.md  2026-05-15-goal29-ts-client-devices-health.md  2026-05-15-goal30-devices-page-health.md  2026-05-15-goal31-device-detail-health.md  2026-05-15-goal32-device-info-endpoint.md  2026-05-15-goal9-tunnel-tls.md  2026-05-16-goal33-drop-dead-device-fields.md  2026-05-16-goal34-agent-info-error-copy.md  2026-05-16-goal35-info-background-poll.md  2026-05-16-goal36-github-actions-ci.md  2026-05-16-goal37-clippy-zero-warnings.md  2026-05-17-goal38-promote-clippy-ci-gate.md  2026-05-17-goal39-msrv-rebaseline.md  (+14 more)
clients/hackline-ts/: README.md  package.json  tsconfig.json  vitest.config.ts
clients/hackline-ts/src/: client.ts  http-client.ts  index.ts  token.ts  types.ts  wire.ts
clients/hackline-ts/test/: audit.test.ts  devices.test.ts  errors.test.ts  globalSetup.ts  health.test.ts  helpers.ts  tunnels.test.ts  users.test.ts
crates/hackline-agent/: Cargo.toml  README.md
crates/hackline-agent/src/: config.rs  connect.rs  error.rs  info.rs  liveliness.rs  main.rs
crates/hackline-agent/src/diag/: mod.rs  state.rs
crates/hackline-agent/static/: app.js  index.html  style.css
crates/hackline-agent/static/lib/: api.js  dom.js  fmt.js  ui.js
crates/hackline-agent/static/views/: connections.js  overview.js  ports.js  setup.js  zenoh.js
crates/hackline-cli/: Cargo.toml  README.md
crates/hackline-cli/src/: client.rs  config.rs  error.rs  main.rs  output.rs
crates/hackline-cli/src/cmd/: cmd_outbox.rs  events.rs  login.rs  mod.rs  org.rs  whoami.rs
crates/hackline-cli/src/cmd/device/: add.rs  list.rs  remove.rs  show.rs
crates/hackline-cli/src/cmd/token/: mint.rs
crates/hackline-cli/src/cmd/tunnel/: add.rs  list.rs  remove.rs
crates/hackline-cli/src/cmd/user/: add.rs  list.rs  remove.rs
crates/hackline-client/: Cargo.toml
crates/hackline-client/src/: lib.rs
crates/hackline-core/: Cargo.toml  README.md
crates/hackline-core/examples/: spike.rs
crates/hackline-core/src/: bridge.rs  error.rs  lib.rs  session.rs
crates/hackline-gateway/: Cargo.toml  README.md
crates/hackline-gateway/migrations/: README.md  V001__init.sql  V002__message_plane.sql  V003__cmd_outbox.sql  V004__audit_session_columns.sql  V005__orgs.sql  V006__audit_tunnel_session_ts_seconds.sql  V007__audit_fks_on_delete_set_null.sql
crates/hackline-gateway/src/: cmd_delivery.rs  config.rs  error.rs  events_bus.rs  lib.rs  liveliness.rs  metrics.rs  msg_fanin.rs  rtt_cache.rs  state.rs  tls.rs  zenoh_client.rs
crates/hackline-gateway/src/api/: admin.rs  health.rs  metrics.rs  mod.rs  router.rs
crates/hackline-gateway/src/api/api_call/: call.rs  mod.rs
crates/hackline-gateway/src/api/audit/: list.rs  mod.rs
crates/hackline-gateway/src/api/claim/: mod.rs  post.rs  status.rs
crates/hackline-gateway/src/api/cmd/: cancel.rs  list.rs  mod.rs  send.rs
crates/hackline-gateway/src/api/devices/: create.rs  delete.rs  get.rs  health.rs  health_probe.rs  info.rs  list.rs  list_health.rs  mod.rs  patch.rs
crates/hackline-gateway/src/api/events/: list.rs  mod.rs  stream.rs
crates/hackline-gateway/src/api/logs/: list.rs  mod.rs  stream.rs
crates/hackline-gateway/src/api/orgs/: create.rs  get_me.rs  list.rs  mod.rs
crates/hackline-gateway/src/api/tunnels/: create.rs  delete.rs  list.rs  mod.rs
crates/hackline-gateway/src/api/users/: create.rs  delete.rs  list.rs  mint_token.rs  mod.rs
crates/hackline-gateway/src/auth/: claim.rs  middleware.rs  mod.rs  scope.rs  token.rs
crates/hackline-gateway/src/db/: audit.rs  claim.rs  cmd_outbox.rs  devices.rs  events.rs  logs.rs  migrations.rs  mod.rs  orgs.rs  pool.rs  tunnels.rs  users.rs
crates/hackline-gateway/src/tunnel/: bridge.rs  http_router.rs  manager.rs  mod.rs  tcp_listener.rs
crates/hackline-gateway/static/admin/: admin.css  admin.js  index.html
crates/hackline-gateway/tests/: cmd_plane.rs  message_plane.rs  org_isolation.rs
crates/hackline-proto/: Cargo.toml  README.md
crates/hackline-proto/examples/: wire_ts.rs
crates/hackline-proto/src/: agent_info.rs  connect.rs  error.rs  event.rs  keyexpr.rs  lib.rs  msg.rs  zid.rs
crates/hackline-proto/tests/: specta_snapshot.rs  wire.ts.snap
deploy/fly/: README.md  gateway.toml
examples/: agent-cloud-tls.toml  agent-tls.toml  agent.toml  gateway-tls.toml  gateway.toml
ui/: README.md
ui/hackline-ui/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/hackline-ui/src/: App.tsx  (+1 more)
(+21 files in other folders)
