[package]
name = "hackline-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Device-side hackline agent: bridges Zenoh queries to local TCP services"

[lints]
workspace = true

[[bin]]
name = "hackline-agent"
path = "src/main.rs"

[dependencies]
hackline-proto = { path = "../hackline-proto" }
hackline-core  = { path = "../hackline-core" }
tokio = { workspace = true }
zenoh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# Diag UI server (loopback only). axum is already a workspace dep used
# by hackline-gateway; reusing it here keeps the device binary's dep
# graph aligned with the gateway's.
axum = { workspace = true }
