[package]
name = "hackline-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "hackline CLI: thin REST/SSE client over the gateway"

[lints]
workspace = true

[[bin]]
name = "hackline"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }
