[package]
name = "hackline-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "Device-side SDK: Zenoh session wrapper enforcing hackline message-plane conventions"

[lints]
workspace = true

[dependencies]
hackline-proto = { path = "../hackline-proto" }
tokio = { workspace = true }
zenoh = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
